--- a/4/4.1/4.1.md
+++ b/4/4.1/4.1.md
@@ -1,9 +1,12 @@
 # 4.1. Módulo 1
 
 # Módulo de Logueo y seguridad
-| Código | R001  |
+| Requerimiento | Nombre  |
 |----------|----------|
 |R001  |Autenticación de usuario|
+|R002  |Olvido de contraseña|
+|R003  |Recuperación de contraseña|
+|R004  |Creación de nuebvo rol|
 
 
 #### - Caso de uso #1: Autenticación de usuario
