--- a/4/4.1/4.1.md
+++ b/4/4.1/4.1.md
@@ -6,7 +6,8 @@
 |R001  |Autenticación de usuario|
 |R002  |Olvido de contraseña|
 |R003  |Recuperación de contraseña|
-|R004  |Creación de nuebvo rol|
+|R004  |Asignación de permisos según rol|
+|R004  |Creación de nuevo rol|
 
 
 #### - Caso de uso #1: Autenticación de usuario
