--- a/4/4.1/4.1.md
+++ b/4/4.1/4.1.md
@@ -5,8 +5,7 @@
 |----------|----------|
 |R001  |Autenticación de usuario|
 |R002  |Olvido de contraseña|
-|R003  |Recuperación de contraseña|
-|R004  |Asignación de permisos según rol|
+|R003  |Asignación de permisos según rol|
 |R004  |Creación de nuevo rol|
 
 
@@ -26,7 +25,7 @@
 |3|El sistema verifica si el correo ingresado está en su base de datos |
 |4|El sistema verifica si la contraseña ingresada está en su base de datos |
 |5|El sistema verifica el tipo de usuario (administrador u empleado) |
-|6|Caso terminado |
+|6|Fin del caso de uso |
 
 #### - Caso de uso #2: Olvido de contraseña
 
@@ -53,5 +52,21 @@
 |11| El usuario ingresa la nueva contraseña de nuevo  |
 |12| El sistema reemplaza dicha contraseña ingresada por la antigua en su base de datos  |
 |13| El sistema actualiza la información de dicho usuario  |
-|14|  El caso termina |
+|14| Fin del caso de uso |
 
+#### - Caso de uso #3: Asignación de permisos según rol
+
+| Código | R003  |
+|----------|----------|
+|Objetivo  | Asignar permisos dentro de la página a los usuarios según su puesto en la empresa |
+| Descripción |El usuario despues de loguearse poseerá distintos permisos en el sistema según sus responasabilidades en la empresa.  |
+| Actor primario | Un administrador de RRHH u otro empleado de la empresa   |
+| Actor secundario  | -  |
+| Precondiciones| Haber realizado el login  |
+
+| Paso     | Acción   |
+|----------|----------|
+|1|El usuario se loguea |
+|2|El sistema comprueba el puesto del empleado en la base de datos    |
+|3|El sistema muestra una interfaz distinta según los permisos que posea el usario |
+|4|Fin del caso de uso  |
