--- a/4/4.1/4.1.md
+++ b/4/4.1/4.1.md
@@ -24,8 +24,7 @@
 |2|El usuario ingresa su respectivo correo y contraseña |
 |3|El sistema verifica si el correo ingresado está en su base de datos |
 |4|El sistema verifica si la contraseña ingresada está en su base de datos |
-|5|El sistema verifica el tipo de usuario (administrador u empleado) |
-|6|Fin del caso de uso |
+|5|Fin del caso de uso |
 
 #### - Caso de uso #2: Olvido de contraseña
 
@@ -67,6 +66,23 @@
 | Paso     | Acción   |
 |----------|----------|
 |1|El usuario se loguea |
-|2|El sistema comprueba el puesto del empleado en la base de datos    |
+|2|El sistema verifica el tipo de usuario (administrador u empleado) |
 |3|El sistema muestra una interfaz distinta según los permisos que posea el usario |
 |4|Fin del caso de uso  |
+
+#### - Caso de uso #4: Creación de nuevo rol
+| Código | R004  |
+|----------|----------|
+|Objetivo  | Crear un nuevo tipo de usuario para otorgar permisos en especifico dentro del sistema |
+| Descripción |Dentro del sistema se introducirá un nuevo rol que se le asignará funciones y permisos que se considere  |
+| Actor primario | Un administrador de RRHH u otro empleado de la empresa   |
+| Actor secundario  | -  |
+| Precondiciones| Contar con permisos de administración de roles  |
+
+| Paso     | Acción   |
+|----------|----------|
+|1|El administrador de RRHH se loguea |
+|2|Ingresa el nuevo rol al sistema |
+|3|Gestiona los permisos que poseerá este nuevo rol |
+|4|Registra el nuevo rol en el sistema |
+|5|Fin del caso de uso  |
