--- a/4/4.2/4.2.md
+++ b/4/4.2/4.2.md
@@ -1,3 +1,27 @@
 # 4.2. Módulo 2
 
 # Módulo de Usuarios
+| Requerimiento | Nombre  |
+|----------|----------|
+|R001  |Autenticación de usuario|
+|R002  |Olvido de contraseña|
+|R003  |Asignación de permisos según rol|
+|R004  |Creación de nuevo rol|
+
+
+#### - Caso de uso #1: Autenticación de usuario
+| Código | R001  |
+|----------|----------|
+|Objetivo  |Verificar la identidad del usuario mediante un correo y una contraseña ingresada de manera correcta|
+| Descripción   | El usuario ingresará su correo y contraseña respectiva para poder acceder al sistema de planillas; dicho sistema se encargará de verificar si los datos ingresados son correctos   |
+| Actor primario    | Un administrador de RRHH o otro empleado de la empresa  |
+| Actor secundario    | -  |
+| Precondiciones    | Los datos que ingrese el usuario deben estar en la base de datos del sistema  |
+
+| Paso     | Acción   |
+|----------|----------|
+|1|El usuario ingresa al sistema de planillas|
+|2|El usuario ingresa su respectivo correo y contraseña |
+|3|El sistema verifica si el correo ingresado está en su base de datos |
+|4|El sistema verifica si la contraseña ingresada está en su base de datos |
+|5|Fin del caso de uso |
