--- a/4/4.2/4.2.md
+++ b/4/4.2/4.2.md
@@ -1,27 +1,85 @@
 # 4.2. Módulo 2
 
-# Módulo de Usuarios
-| Requerimiento | Nombre  |
-|----------|----------|
-|R001  |Autenticación de usuario|
-|R002  |Olvido de contraseña|
-|R003  |Asignación de permisos según rol|
-|R004  |Creación de nuevo rol|
-
-
-#### - Caso de uso #1: Autenticación de usuario
+#### - Caso de uso #8: Crear empleado y usuario 
 | Código | R001  |
 |----------|----------|
-|Objetivo  |Verificar la identidad del usuario mediante un correo y una contraseña ingresada de manera correcta|
-| Descripción   | El usuario ingresará su correo y contraseña respectiva para poder acceder al sistema de planillas; dicho sistema se encargará de verificar si los datos ingresados son correctos   |
-| Actor primario    | Un administrador de RRHH o otro empleado de la empresa  |
-| Actor secundario    | -  |
-| Precondiciones    | Los datos que ingrese el usuario deben estar en la base de datos del sistema  |
+|Objetivo  | Introducir los datos de un empleado con contrato vigente con la empresa, de manera que se cree un usuario para este. |
+| Descripción |A través de la subida de datos del empleado, se crea un usuario que le permitirá a este poder ver su sistema de planillas.  |
+| Actor primario |  Administrador de RRHH  |
+| Actor secundario  | Empleados  |
+| Precondiciones| Administrador  |
 
 | Paso     | Acción   |
 |----------|----------|
-|1|El usuario ingresa al sistema de planillas|
-|2|El usuario ingresa su respectivo correo y contraseña |
-|3|El sistema verifica si el correo ingresado está en su base de datos |
-|4|El sistema verifica si la contraseña ingresada está en su base de datos |
-|5|Fin del caso de uso |
+|1| Dirigirse a la pestaña “Empleados”.   |
+|2| Ingresar los datos personales del empleado, siendo los que contienen un * de carácter obligatorio.  |
+|3| El sistema verifica que los datos de carácter obligatorio hayan sido rellenados.  |
+|4| Ingresar los datos previsionales del empleado, siendo los que contienen un * de carácter obligatorio.  |
+|5| El sistema verifica que los datos de carácter obligatorio hayan sido rellenados.  |
+|6| Ingresar los datos del trabajo del empleado, entre los que estará el sueldo bruto, siendo los que contienen un * de carácter obligatorio.  |
+|7| El sistema verifica que los datos de carácter obligatorio hayan sido rellenados.  |
+|8| Dar click en finalizar.  |
+|9| El usuario habrá sido creado exitosamente.  |
+
+#### - Caso de uso #9: Ver los usuarios vigentes o activos
+
+| Código | R001  |
+|----------|----------|
+|Objetivo  | Visualizar los usuarios activos en el sistema de planillas. |
+| Descripción |El administrador podrá visualizar los usuarios cuyo estado es activo en el momento, es decir, los empleados que tienen contrato vigente con la empresa.  |
+| Actor primario | Empleados   |
+| Actor secundario  | Administrador   |
+| Precondiciones| El usuario tiene contrato vigente con la empresa.  |
+
+| Paso     | Acción   |
+|----------|----------|
+|1|Dirigirse a la pestaña “Empleados”.   |
+|2| Click en la casilla “Vigentes”.  |
+|3| Se visualizará la lista de todos los usuarios vigentes en ese momento.  |
+|4| Para ver los datos del empleado al detalle, dar click en el botón del ojo.  |
+|5| Se observarán los datos personales, previsionales y de trabajo del empleado.  |
+
+#### - Caso de uso #10: Renovar contrato de empleado 
+
+| Código | R009  |
+|----------|----------|
+|Objetivo  |Renovar el contrato de un empleado.  |
+| Descripción | El administrador podrá renovar el contrato del empleado bajo las mismas condiciones o cambiar los datos que hayan sido modificados, como por ejemplo, el cargo, área, sueldo, etc. |
+| Actor primario |  Empleados  |
+| Actor secundario  | Empleados   |
+| Precondiciones| La empresa autoriza y firma con el empleado un nuevo contrato.  |
+
+| Paso     | Acción   |
+|----------|----------|
+|1| Dirigirse a la pestaña “Empleados”.  |
+|2| Dirigirse a la pestaña “Empleados”.  |
+|3| Dirigirse a la pestaña “Empleados”.  |
+|4| Dirigirse a la pestaña “Empleados”.  |
+|5| Elegir el emplado a renovar y dar click nuevamente en el botón “Renovar” que aparece en la fila del empleado.  |
+|6| Se visualizará a los datos personales del empleado con los datos anteriormente ingresados por el administrador a excepción del último ítem, el cual será sobre la fecha de inicio del nuevo contrato, además en caso de ser necesario algún cambio en otro ítem se podrá ejecutar sin problema.  |
+|7| Dar click en “Siguiente”  |
+|8| Se visualizará a los datos previsionales del empleado con los datos anteriormente ingresados por el administrador, además en caso de ser necesario algún cambio en otro ítem se podrá ejecutar sin problema.  |
+|9| Dar click en “Siguiente”  |
+|10| Se visulizará los ítems de datos de trabajo vacíos, para ser rellenados con los nuevos datos del contrato.  | 
+|11|  En caso de que los datos del contrato vayan a ser los mismos que el anterior, se dará click en “Condiciones Anteriores” |
+|12| Una vez llenado todos los datos necesarios, dar click en “Finalizar” para terminar el proceso de renovación.  |
+
+#### - Caso de uso #11: Ver los usuarios desvinculados
+| Código | R011  |
+|----------|----------|
+|Objetivo  |Desvincular a un empleado activo o visualizar a los empleados desvinculados.  |
+| Descripción |El administrador podrá desvincular usuarios activos, por término de contrato, además de poder visualizar los empleados desvinculados anteriormente.  |
+| Actor primario |  Empleados  |
+| Actor secundario  | Administrador  |
+| Precondiciones| El empleado no tiene contrato vigente con la empresa.  |
+
+| Paso     | Acción   |
+|----------|----------|
+|1| Dirigirse a la pestaña “Empleados”.  |
+|2| Click en la casilla “Desvinculados”.  |
+|3| Se visualizará la lista de todos los usuarios desvinculados en ese momento y podrá verse los datos que este registró dando click en el botón “ojo”.  |
+|4| Si se quisiera desvincular a un usuario activo, dar click en el botón “Desvincular usuario”.  |
+|5| Aparecerán todos los usuarios activos en ese momento.  |
+|6| Se elige el usuario activo a desvincular dando click al botón “Desvincular” del empleado.  |
+|7| Se da click al botón “Confirmar” de la ventana emergente.  |
+|8| El usuario activo elegido será desvinculado y pasará a estar desactivado.  |
