--- a/4/4.2/4.2.md
+++ b/4/4.2/4.2.md
@@ -1,4 +1,11 @@
 # 4.2. Módulo 2
+## Módulo de usuarios
+| Requerimiento | Nombre  |
+|----------|----------|
+|R001  |Autenticación de usuario|
+|R002  |Olvido de contraseña|
+|R003  |Asignación de permisos según rol|
+|R004  |Creación de nuevo rol|
 
 #### - Caso de uso #8: Crear empleado y usuario 
 | Código | R001  |
