--- a/4/4.2/4.2.md
+++ b/4/4.2/4.2.md
@@ -1,11 +1,12 @@
 # 4.2. Módulo 2
-## Módulo de usuarios
+
+# Módulo de usuarios
 | Requerimiento | Nombre  |
 |----------|----------|
-|R001  |Autenticación de usuario|
-|R002  |Olvido de contraseña|
-|R003  |Asignación de permisos según rol|
-|R004  |Creación de nuevo rol|
+|R001  |Crear empleado y usuario |
+|R002  |Ver los usuarios vigentes o activos|
+|R003  |Renovar contrato de empleado|
+|R004  |Ver los usuarios desvinculados|
 
 #### - Caso de uso #8: Crear empleado y usuario 
 | Código | R001  |
