--- a/4/4.2/4.2.md
+++ b/4/4.2/4.2.md
@@ -1,6 +1,6 @@
 # 4.2. Módulo 2
 
-# Módulo de usuarios
+# Módulo de Usuarios
 | Requerimiento | Nombre  |
 |----------|----------|
 |R001  |Crear empleado y usuario |
