--- a/2/2.2/2.2.md
+++ b/2/2.2/2.2.md
@@ -4,3 +4,9 @@
 El proceso del módulo inquilinos abarca desde el registro hasta la gestión de solicitudes. Se muestra la interacción entre el inquilino, administrador y el sistema en un solo diagrama simplificado.
 
 ![Proceso Inquilinos](ProcesoInquilino_TOBE.png)
+
+## Proceso Mantenimiento 
+
+El proceso del módulo de mantenimientos permite el registro de incidencias que surgen en las tiendas del centro comercial y también la programación de mantenimientos.
+
+![MantenimientoTOBE](Mantenimiento_TO_BE.jpg)
