--- a/2/2.1/2.1.md
+++ b/2/2.1/2.1.md
@@ -17,7 +17,7 @@ Este flujo representa un proceso más de intervención humana y sistema desartic
 
 ## Proceso de realización de Mantenimiento
 
-Este flujo representa el proceso la forma como se da actualmente el proceso de mantenimiento correctivo en las tiendas.
+Este flujo representa el proceso o la forma como se da actualmente el proceso de mantenimiento correctivo en las tiendas.
 ![Mantenimiento](Mantenimiento_AS_IS.jpg)
 
 
