--- a/3/3.md
+++ b/3/3.md
@@ -87,9 +87,14 @@ Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios 
 - 
 
 ## 8. Módulo de Mantenimiento y Servicio
+Mediante este modulo la empresa podrá gestionar el mantenimiento preventivo y correctivo del centro comercial.
 ### Responsabilidades
-- 
+- Registrar los mantenimientos preventivos y correctivos para una mejor gestión.
+- Permitir al administrador de mantenimiento ver los mantenimientos correctivos pendientes a programar.
+- Permitir al supervisor de mantenimiento observar los mantenimientos pendientes a su cargo y los que ya están realizados.
+- Permitir al administrador programar mantenimientos preventivos al establecimiento.
+- Permitir registrar incidencias que ocurren en el establecimiento que implica una acción correctiva.
 ### Interacción con otros módulos
-- 
+- Modulo de usuario: Los usuarios, como el supervisor de mantenimiento o los administradores del centro comercial, necesitan acceso al sistema para gestionar las tareas de mantenimiento. 
 
 
