--- a/4/4.5/4.5.md
+++ b/4/4.5/4.5.md
@@ -24,28 +24,13 @@
 | 1 | El Administrador accede al módulo de facturación y selecciona la opción "Generar Facturas". |
 | 2 | El sistema muestra un formulario con la lista de inquilinos y las opciones para ajustar los términos de facturación si es necesario. |
 | 3 | El Administrador confirma la generación de facturas. |
-| 4 | El sistema genera las facturas y las envía automáticamente a los inquilinos. |
+| 4 | El sistema genera las facturas y se envía  a los inquilinos. |
 | 5 | El sistema actualiza el estado de las facturas a "Pendiente". |
 | 6 | Fin del caso de uso. |
 
-## **Caso de Uso #2: Registro de Pagos**
+## **Caso de Uso #2: Envío de Recordatorios de Pago**
 
 | Código | R002 |
-|---|---|
-| **Objetivo** | Registrar los pagos realizados por los inquilinos. |
-| **Descripción** | Permite al administrador o al sistema registrar los pagos realizados, ya sea manualmente o automáticamente a través de una pasarela de pago. |
-| **Actor** | Administrador, Sistema |
-| **Flujo de eventos** |
-| 1 | El Administrador accede al módulo de pagos y selecciona la opción "Registrar Pago Manual" o "Pagos Automáticos". |
-| 2 | El Administrador selecciona una factura y el sistema solicita detalles del pago. |
-| 3 | El Administrador ingresa los detalles y confirma el pago. |
-| 4 | El sistema actualiza el estado de la factura a "Pagado". |
-| 5 | El sistema envía una notificación al inquilino y genera el recibo. |
-| 6 | Fin del caso de uso. |
-
-## **Caso de Uso #3: Envío de Recordatorios de Pago**
-
-| Código | R003 |
 |---|---|
 | **Objetivo** | Enviar recordatorios de pago antes o después del vencimiento de una factura. |
 | **Descripción** | El sistema puede enviar recordatorios automáticos o manuales de pago a los inquilinos que tienen facturas por vencer o vencidas. |
@@ -56,5 +41,23 @@
 | 3 | El sistema registra el envío de la notificación y actualiza el historial del inquilino. |
 | 4 | El Administrador puede revisar el estado de los recordatorios enviados. |
 | 5 | Fin del caso de uso. |
+
+
+## **Caso de Uso #3: Registro de Pagos**
+
+| Código | R003 |
+|---|---|
+| **Objetivo** | Registrar los pagos realizados por los inquilinos. |
+| **Descripción** | Permite al administrador o al sistema registrar los pagos realizados. |
+| **Actor** | Administrador, Sistema |
+| **Flujo de eventos** |
+| 1 | El Administrador accede al módulo de pagos y selecciona la opción "Registrar Pago". |
+| 2 | El Administrador selecciona una factura y el sistema solicita detalles del pago. |
+| 3 | El Administrador ingresa los detalles y confirma el pago. |
+| 4 | El sistema actualiza el estado de la factura a "Pagado". |
+| 5 | El sistema envía una notificación al inquilino y genera el recibo. |
+| 6 | Fin del caso de uso. |
+
+
 
 ---
