--- a/0/0.7_Luis/0.7.md
+++ b/0/0.7_Luis/0.7.md
@@ -5,3 +5,17 @@
 - Correo: luis.aymachoque.a@uni.pe
 - Correo personal: aymachoqueluis26@gmail.com
 - Usuario de Github: LJairo26
+# Presentación
+- ¿Por qué la UNI - FIIS?
+ Escogí la UNI porque tiene una reputación sólida en el ámbito de la ingeniería. Además, la currícula se enfoca en una formación teórica y práctica que considero esencial para mi desarrollo profesional.
+- ¿Cómo evalúo mi experiencia con los cursos de la carrera hasta el momento?
+ Hasta ahora, mi experiencia ha sido muy buena. He aprendido conceptos fundamentales y adquirido habilidades prácticas que son clave en el campo de la ingeniería de sistemas. La mayoría de los cursos han sido desafiantes, lo que me ha obligado a superarme.
+- ¿Cuál es mi experiencia en programación y bases de datos?
+  Mi experiencia en programación se limita principalmente a lo que he aprendido en la universidad hasta ahora. He tenido la oportunidad de trabajar con conceptos básicos en lenguajes como Java y Python, donde he hecho proyectos sencillos que abarcan lo esencial de la programación, como estructuras de control y funciones. 
+- ¿Cómo fue mi experiencia en el curso de Modelado Conceptual de datos y
+qué tema elegí?
+Mi experiencia en el curso de modelado conceptual de datos fue realmente interesante. Elegí como tema para mi trabajo a la empresa Servelir, enfocándome en el área logística. Esto me permitió aplicar lo aprendido en clases a un caso práctico, lo que hizo el proceso de aprendizaje mucho más significativo.
+- ¿Qué espero del curso?
+ Espero que el curso de diseño de base de datos me proporcione una comprensión más profunda de cómo estructurar bases de datos efectivas y optimizar su rendimiento.
+- ¿Cómo me veo en 10 años?
+ En diez años, espero estar trabajando en una empresa importante, habiéndome especializado en una rama específica, como la ciencia de datos.
