--- a/4/4.3/4.3.md
+++ b/4/4.3/4.3.md
@@ -3,85 +3,75 @@
  
 | Requerimiento | Nombre |
 |---|---|
-| R001 | Crear un nuevo contrato de arrendamiento |
-| R002 | Revisar los contratos de arrendamiento mediante filtros |
-| R003 | Gestionar los locales comerciales |
-| R004 | Gestionar los detalles del contrato de cada inquilino |
+| R001 | Gestionar los contrato de arrendamiento |
+| R002 | Gestionar los locales comerciales |
+| R003 | Gestionar los detalles del contrato de cada inquilino |
 
-## Caso de Uso #1: Crear un nuevo contrato de arrendamiento
+Aquí tienes el caso de uso combinado "Gestionar contratos", uniendo ambos casos de uso en un solo documento.
+
+## Caso de Uso: Gestionar contratos
 
 | Código | R001 |
 |---|---|
-| Objetivo | Permitir el registro de un nuevo contrato de arrendamiento. |
-| Descripción | El administrador crea un nuevo contrato para un inquilino y un local específico, definiendo las condiciones del arrendamiento. |
+| Objetivo | Permitir el registro y revisión de contratos de arrendamiento. |
+| Descripción | El administrador puede crear un nuevo contrato para un inquilino y un local específico, así como filtrar y revisar contratos existentes. |
 | Actor | Administrador |
 | Flujo de eventos |
-| 1 | El usuario accede al sistema en la seccion de arrendamientos y selecciona la opción "Crear nuevo contrato". |
-| 2 | El sistema muestra un formulario para ingresar los datos del nuevo contrato: inquilino, local, fecha de inicio, fecha de fin, monto de renta, forma de pago, y otras condiciones. |
-| 3 | El usuario completa el formulario con la información requerida. |
-| 4 | El sistema valida que el inquilino y el local existan en el sistema y que no haya conflictos de fechas con otros contratos. |
-| 5 | El sistema registra el nuevo contrato en la base de datos. |
-| 6 | Fin del caso de uso. |
-
-## Caso de Uso #2: Revisar los contratos de arrendamiento mediante filtros 
-
-**Descripción:** Este caso de uso detalla las acciones necesarias para obtener una lista de contratos filtrados en el sistema.
-
-| Código | R002 |
-|---|---|
-| Objetivo | Permitir al usuario filtrar los contratos activos en el sistema. |
-| Descripción | El administrador puede obtener un reporte especifico de contratos, filtrado por diferentes criterios (estado del contrato, tipo de local, rango de fechas, etc.). |
-| Actor | Administrador |
-| Flujo de eventos |
-| 1 | El usuario accede al sistema y selecciona la opción Contratos. |
-| 2 | El sistema muestra una lista del total de contratos. |
-| 4 | El sistema presenta un formulario para filtrar los resultados: |
+| 1 | El usuario accede al sistema en la sección de arrendamientos. |
+| 2 | El usuario elige entre crear un nuevo contrato o revisar contratos existentes. |
+| **Crear nuevo contrato** |  |
+| 3 | Si elige "Crear nuevo contrato", el sistema muestra un formulario para ingresar los datos del nuevo contrato: inquilino, local, fecha de inicio, fecha de fin, monto de renta, forma de pago y otras condiciones. |
+| 4 | El usuario completa el formulario con la información requerida. |
+| 5 | El sistema valida que el inquilino y el local existan en el sistema y que no haya conflictos de fechas con otros contratos. |
+| 6 | El sistema registra el nuevo contrato en la base de datos. |
+| **Revisar contratos** |  |
+| 7 | Si elige revisar contratos, el sistema muestra una lista del total de contratos. |
+| 8 | El sistema presenta un formulario para filtrar los resultados por: |
 |   | - Estado del contrato (activo, vencido, etc.) |
-|   | - Tipo de local (tienda, modulo) |
+|   | - Tipo de local (tienda, módulo) |
 |   | - Rango de fechas (inicio, fin) |
-| 5 | El usuario aplica los filtros y envía la solicitud. |
-| 6 | El sistema consulta la base de datos y obtiene el número total de contratos que cumplen con los criterios de búsqueda. |
-| 7 | El sistema muestra el resultado en pantalla, presentando el número total de contratos encontrados. |
-| 8 | Fin del caso de uso. |
+| 9 | El usuario aplica los filtros y envía la solicitud. |
+| 10 | El sistema consulta la base de datos y obtiene el número total de contratos que cumplen con los criterios de búsqueda. |
+| 11 | El sistema muestra el resultado en pantalla, presentando el número total de contratos encontrados. |
+| 12 | Fin del caso de uso. |
 
-## Caso de Uso #3: Gestionar los locales comerciales
+## Caso de Uso #3: Gestionar los objetos de alquiler
 
-**Descripción:** Este caso de uso detalla las acciones relacionadas con la administración de los locales comerciales disponibles para arrendamiento.
+**Descripción:** Este caso de uso detalla las acciones relacionadas con la administración de los objetos de alquiler disponibles para arrendamiento.
 
 | Código | R003 |
 |---|---|
 | Objetivo | Permitir la gestión completa de los locales comerciales. |
-| Descripción | El administrador puede agregar nuevos locales, modificar información existente y consultar la disponibilidad de los mismos. |
+| Descripción | El administrador puede agregar nuevos objetos de alquiler, modificar información existente y consultar la disponibilidad de los mismos. |
 | Actor | Administrador |
 | Flujo de eventos |
-| 1 | El usuario accede al sistema y selecciona la opción "Gestionar locales comerciales". |
+| 1 | El usuario accede al sistema y selecciona la opción "Objetos de alquiler". |
 | 2 | El sistema muestra un listado de todos los locales comerciales disponibles, incluyendo información como: |
 |   | - Codigo de local |
 |   | - Ubicación |
 |   | - Tamaño |
 |   | - Estado (disponible, ocupado, en mantenimiento) |
 | 3 | El usuario selecciona una de las siguientes opciones: |
-|   | - Agregar nuevo local: Se muestra un formulario para ingresar los datos del nuevo local (ubicación, tamaño, descripción, etc.). |
-|   | - Modificar local: Se selecciona el local a modificar y se muestra un formulario con los datos actuales para su edición. |
-|   | - Buscar locales: Se muestra un formulario para realizar búsquedas por criterios como ubicación, tamaño, estado, etc. |
+|   | - Agregar nuevo objeto de alquiler: Se muestra un formulario para ingresar los datos del nuevo local (ubicación, tamaño, descripción, etc.). |
+|   | - Editar: Se selecciona el local a modificar y se muestra un formulario con los datos actuales para su edición. |
 | 4 | El sistema realiza la acción seleccionada por el usuario y actualiza la base de datos. |
 | 5 | El sistema muestra un mensaje de confirmación al usuario. |
 | 6 | Fin del caso de uso. |
 
-## Caso de Uso #4: Gestionar los detalles del contrato de cada inquilino
+## Caso de Uso #4: Registrar los detalles del contrato de cada inquilino
 
-**Descripción:** Este caso de uso detalla las acciones necesarias para administrar la información específica de cada contrato de arrendamiento.
+**Descripción:** Este caso de uso detalla las acciones necesarias para registrar la información específica de cada contrato de arrendamiento.
 
 | Código | R004 |
 |---|---|
-| Objetivo | Permitir la gestión detallada de cada contrato de arrendamiento. |
-| Descripción | El administrador puede visualizar la información detallada de un contrato, como el inquilino, el monto de la renta, la fecha de inicio y fin, los pagos realizados, etc. |
+| Objetivo | Permitir el registro detallado de cada contrato de arrendamiento. |
+| Descripción | El administrador puede visualizar la información detallada de un contrato, como el inquilino, el monto de la renta, la fecha de inicio y fin, etc. |
 | Actor | Administrador |
 | Flujo de eventos |
 | 1 | El usuario accede al sistema y selecciona la opción Contratos. |
 | 2 | El sistema muestra un listado de todos los contratos de arrendamiento, incluyendo información básica como codigo de contrato, inquilino, local, estado, etc. |
 | 3 | El usuario selecciona un contrato específico para visualizarlo. |
-| 4 | El sistema muestra una pantalla detallada del contrato seleccionado, incluyendo: |
+| 4 | El sistema muestra una pantalla con campos disponibles para registrar un contrato, incluyendo: |
 |   | - Información del inquilino (nombre, apellidos, DNI, dirección, teléfono) |
 |   | - Información del local (número de local, ubicación) |
 |   | - Condiciones del contrato (monto de la renta, fecha de inicio, fecha de fin) |
