--- a/4/4.3/4.3.md
+++ b/4/4.3/4.3.md
@@ -7,9 +7,7 @@
 | R002 | Gestionar los locales comerciales |
 | R003 | Gestionar los detalles del contrato de cada inquilino |
 
-Aquí tienes el caso de uso combinado "Gestionar contratos", uniendo ambos casos de uso en un solo documento.
-
-## Caso de Uso: Gestionar contratos
+## Caso de Uso #1: Gestionar contratos
 
 | Código | R001 |
 |---|---|
@@ -35,11 +33,11 @@ Aquí tienes el caso de uso combinado "Gestionar contratos", uniendo ambos casos
 | 11 | El sistema muestra el resultado en pantalla, presentando el número total de contratos encontrados. |
 | 12 | Fin del caso de uso. |
 
-## Caso de Uso #3: Gestionar los objetos de alquiler
+## Caso de Uso #2: Gestionar los objetos de alquiler
 
 **Descripción:** Este caso de uso detalla las acciones relacionadas con la administración de los objetos de alquiler disponibles para arrendamiento.
 
-| Código | R003 |
+| Código | R002 |
 |---|---|
 | Objetivo | Permitir la gestión completa de los locales comerciales. |
 | Descripción | El administrador puede agregar nuevos objetos de alquiler, modificar información existente y consultar la disponibilidad de los mismos. |
@@ -58,11 +56,11 @@ Aquí tienes el caso de uso combinado "Gestionar contratos", uniendo ambos casos
 | 5 | El sistema muestra un mensaje de confirmación al usuario. |
 | 6 | Fin del caso de uso. |
 
-## Caso de Uso #4: Registrar los detalles del contrato de cada inquilino
+## Caso de Uso #3: Registrar los detalles del contrato de cada inquilino
 
 **Descripción:** Este caso de uso detalla las acciones necesarias para registrar la información específica de cada contrato de arrendamiento.
 
-| Código | R004 |
+| Código | R003 |
 |---|---|
 | Objetivo | Permitir el registro detallado de cada contrato de arrendamiento. |
 | Descripción | El administrador puede visualizar la información detallada de un contrato, como el inquilino, el monto de la renta, la fecha de inicio y fin, etc. |
