--- a/2/2.md
+++ b/2/2.md
@@ -2,8 +2,7 @@
 
 En Mallplaza entre sus diferentes móudlos hemos podido identificar diferentes procesos que se siguen para la gestión de arrendamientos de los espacios de sus sedes; desde el asignación de espacios y contratos hasta el mantenimiento y pagos de estos.
 
-| N° | Nombre de Procesos |
-|----|--------------------|
-| 1 | Log in y seguridad |
-| 2 | Gestión de empleados |
-| 3 | Gestión de inquilinos |
+## CONTENIDO
+[2.1. Procesos AS-IS](2.1/2.1.md)
+
+[2.2. Procesos TO-BE](2.2/2.2.md)
