--- a/3/3.2/3.2.md
+++ b/3/3.2/3.2.md
@@ -1,3 +1,100 @@
 # 3.2. Listado de Módulos
 
-6. Modulo de recobros
+## 1. Módulo de Logueo y Seguridad
+### Responsabilidades
+- 
+#### Interacción con otros módulos
+- 
+
+## 2. Módulo de Usuarios
+### Responsabilidades
+- 
+### Interacción con otros módulos
+- 
+
+## 3 Módulo de Arrendamientos
+### Responsabilidades
+- 
+### Interacción con otros módulos
+- 
+
+## 4. Módulo de Inquilinos
+### Responsabilidades
+- Registro y Gestión de Inquilinos: Almacenar y manteren la información de los inquilinos, incluyendo su nombre, razon social, RUC, dirección, teléfono y correo electrónico.
+- Gestión de Contratos de Arrendamiento.
+- Monitoreo de Espacios Asignados: Aseguramiento de los espacios esten debidamente ocupados y gestionados en función al contrato.
+### Interacción con otros módulos
+- Con el módulo de Arrendamientos, el estado de los arrendamientos (activo, expirado, pendiente de renovación).
+- Con Facturación y Pagos, este modulo se comunica con inquilinos para generar las facturas mensuales o según lo acordado y registrar los pagos que realizan.
+- Con Gestión Financiera, ingresos generados por los contratros de arrendamiento de los inquilinos, seguimiento de pagos, cuentas por cobrar y proyecciones de ingresos.
+- Con eventos, un inquilino participa en un evento.
+- Con Mantenimiento y Servicios, si un espacio arrendado por un inquilino requiere mantenimiento, este módulo gestionará las solicitudes de servicio, pero el de inquilinos será responsable de mantener la comunicación con el inquilino afectado.
+
+## 5. Módulo de Facturación y Pagos
+### Responsabilidades
+- 
+### Interacción con otros módulos
+- 
+
+## 6. Módulo Recobro
+Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios extras que el inquilino requiera para su negocio.
+### Responsabilidades
+- Gestionar el proceso de los recobros desde el momento en que el inquilino realice la solicitud hasta que se comunique la factura del recobro
+### Interacción con otros módulos
+- Con el modulo de gestion de inquilinos y modulo de facturacion y pagos
+
+  Detalles del estado:
+  
+    Enviado: Se realizo el envio de la solicitud para el servicio
+  
+    Valorizando: La solicitud ha sido preaprobada y esta en espera para realizar la negociacion
+    Rechazado: La solicitud ha sido rechazada
+  
+    Pendiente: La solicitud ha sido aprobada y se esta procediendo con las actividades para su ejecucion
+  
+    Ejecutado: El servicio ha sido ejecutado con exito
+  
+    Completado: Se ha realizado el pago por el recobro
+  Funcionalidad:
+  - Home recobros
+    
+    Responsabilidad: Es la ventana por el cual el inquilino puede ver el estado de los recobros e iniciar la solicitud de uno nuevo
+  - Solicitud de recobro
+    
+    Responsabilidad: Permite al inquilino enviar una solicitud por un servicio, dando los detalles necesarios del mismo
+  - Recepcion del recobro
+    
+    Responsabilidad: Permite a la empresa visualizar la solicitud del recobro del inquilino
+  - Valoracion del recobro
+    
+    Responsabilidad: Permite a la empresa planificar y valorar las actividades necesarias para realizar el servicio
+  - Negociacion del recobro
+    
+    Responsabilidad: Es el medio por el cual el inquilino y la empresa se comunican para llegar a un acuerdo sobre el servicio que termine en un contrato
+  - Ejecucion del recobro
+    
+    Responsabilidad: Permite la supervision de las actividades realizadas para llevar a cabo el servicio
+  - Facturacion del recobro
+    
+    Responsabilidad: La ventana por la cual el inquilino realiza el pago del servicio
+  - Recepcion del recobro
+    
+    Responsabilidad: Comunicar al modulo de factura y pagos sobre la facturacion del recobro
+
+## 7. Módulo de Eventos
+### Responsabilidades
+- 
+### Interacción con otros módulos
+- 
+
+## 8. Módulo de Mantenimiento y Servicio
+Mediante este módulo la empresa podrá gestionar el mantenimiento preventivo y correctivo del centro comercial.
+### Responsabilidades
+- Registrar los mantenimientos preventivos y correctivos para una mejor gestión.
+- Permitir al administrador de mantenimiento ver los mantenimientos correctivos pendientes a programar.
+- Permitir al supervisor de mantenimiento observar los mantenimientos pendientes a su cargo y los que ya están realizados.
+- Permitir al administrador programar mantenimientos preventivos al establecimiento.
+- Permitir registrar incidencias que ocurren en el establecimiento que implica una acción correctiva.
+### Interacción con otros módulos
+- Módulo de usuario: Los usuarios, como el supervisor de mantenimiento o los administradores del centro comercial, necesitan acceso al sistema para gestionar las tareas de mantenimiento. 
+
